--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/IconoVinilo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/812/812680.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Final</title>
   </head>
@@ -10,7 +10,12 @@
     <header>
       <h1>Discos de Punk Rock</h1>
     </header>
-    <main></main>
+    <main>
+      <h2>Discos favoritos</h2>
+      <section id="discosFavoritos"></section>
+      <h2>Otros Discos</h2>
+      <section id="otrosDiscos"></section>
+    </main>
     <footer>
       <p>Hecho por Antonio Moreno Montes en 2024</p>
     </footer>
