--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <button id="tema">Tema</button>
       <h1>Discos de Punk Rock</h1>
     </header>
     <main>
