spa y mas diseño

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <header>
       <button id="tema">Tema</button>
       <h1>Discos de Punk Rock</h1>
+      <nav>
+        <ul>
+          <li><a href="#null" id="badReligionLink">Bad Religion</a></li>
+          <li><a href="#null" id="lagwagonLink">Lagwagon</a></li>
+          <li><a href="#null" id="nofxLink">NoFX</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <h2>Discos favoritos</h2>
